--- a/Admin/admin-dashboard.html
+++ b/Admin/admin-dashboard.html
@@ -12,25 +12,28 @@
         <div class="logo">Café Nowa Admin</div>
         <nav class="nav-menu">
             <a href="#" class="nav-item active" data-section="overview">
-                <span class="icon">📊</span> Overview
+                <span class="icon">▦</span> Overview
+            </a>
+            <a href="#" class="nav-item" data-section="inventory">
+                <span class="icon">◫</span> Inventory
             </a>
             <a href="#" class="nav-item" data-section="products">
                 <span class="icon">☕</span> Products
             </a>
             <a href="#" class="nav-item" data-section="orders">
-                <span class="icon">📦</span> Orders
+                <span class="icon">□</span> Orders
             </a>
             <a href="#" class="nav-item" data-section="employees">
-                <span class="icon">👥</span> Employees
+                <span class="icon">◉</span> Employees
             </a>
             <a href="#" class="nav-item" data-section="customers">
-                <span class="icon">👤</span> Customers
+                <span class="icon">●</span> Customers
             </a>
             <a href="#" class="nav-item" data-section="analytics">
-                <span class="icon">📈</span> Analytics
+                <span class="icon">◢</span> Analytics
             </a>
             <a href="#" class="nav-item" data-section="settings">
-                <span class="icon">⚙️</span> Settings
+                <span class="icon">◈</span> Settings
             </a>
         </nav>
         <div class="sidebar-footer">
@@ -61,28 +64,28 @@
         <section id="overview" class="content-section active">
             <div class="stats-grid">
                 <div class="stat-card">
-                    <div class="stat-icon">💰</div>
+                    <div class="stat-icon">$</div>
                     <div class="stat-info">
                         <h3>$12,450</h3>
                         <p>Total Revenue Today</p>
                     </div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-icon">📦</div>
+                    <div class="stat-icon">□</div>
                     <div class="stat-info">
                         <h3>156</h3>
                         <p>Orders Today</p>
                     </div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-icon">👥</div>
+                    <div class="stat-icon">◉</div>
                     <div class="stat-info">
                         <h3>23</h3>
                         <p>Active Employees</p>
                     </div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-icon">⭐</div>
+                    <div class="stat-icon">★</div>
                     <div class="stat-info">
                         <h3>4.8</h3>
                         <p>Average Rating</p>
@@ -124,6 +127,180 @@
                         </tbody>
                     </table>
                 </div>
+            </div>
+        </section>
+
+        <!-- Inventory Section -->
+        <section id="inventory" class="content-section">
+            <div class="section-header">
+                <h2>Inventory Management</h2>
+                <button class="btn-primary" id="addInventoryBtn">+ Add Inventory Item</button>
+            </div>
+
+            <!-- Stock Alerts -->
+            <div class="alert-cards">
+                <div class="alert-card warning">
+                    <div class="alert-icon">⚠</div>
+                    <div class="alert-content">
+                        <h4>Low Stock Alert</h4>
+                        <p>5 items below minimum quantity</p>
+                    </div>
+                </div>
+                <div class="alert-card danger">
+                    <div class="alert-icon">✕</div>
+                    <div class="alert-content">
+                        <h4>Out of Stock</h4>
+                        <p>2 items need immediate restock</p>
+                    </div>
+                </div>
+                <div class="alert-card success">
+                    <div class="alert-icon">✓</div>
+                    <div class="alert-content">
+                        <h4>Well Stocked</h4>
+                        <p>15 items in good supply</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Inventory Table -->
+            <div class="inventory-container">
+                <div class="table-controls">
+                    <input type="text" class="search-input" placeholder="Search inventory..." id="inventorySearch">
+                    <select class="filter-select">
+                        <option>All Categories</option>
+                        <option>Coffee Beans</option>
+                        <option>Milk & Dairy</option>
+                        <option>Syrups</option>
+                        <option>Cups & Packaging</option>
+                        <option>Other Supplies</option>
+                    </select>
+                </div>
+
+                <table class="data-table inventory-table">
+                    <thead>
+                        <tr>
+                            <th>Item Name</th>
+                            <th>Category</th>
+                            <th>Current Stock</th>
+                            <th>Unit</th>
+                            <th>Min. Quantity</th>
+                            <th>Status</th>
+                            <th>Last Updated</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="inventoryTableBody">
+                        <tr>
+                            <td><strong>Arabica Coffee Beans</strong></td>
+                            <td>Coffee Beans</td>
+                            <td>25 kg</td>
+                            <td>kg</td>
+                            <td>10 kg</td>
+                            <td><span class="status-badge good">Good Stock</span></td>
+                            <td>Dec 7, 2024</td>
+                            <td>
+                                <button class="btn-icon" onclick="updateStock(this)">↻</button>
+                                <button class="btn-icon" onclick="editInventory(this)">✎</button>
+                                <button class="btn-icon danger" onclick="deleteInventory(this)">✕</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><strong>Whole Milk</strong></td>
+                            <td>Milk & Dairy</td>
+                            <td>8 L</td>
+                            <td>L</td>
+                            <td>15 L</td>
+                            <td><span class="status-badge low">Low Stock</span></td>
+                            <td>Dec 7, 2024</td>
+                            <td>
+                                <button class="btn-icon" onclick="updateStock(this)">↻</button>
+                                <button class="btn-icon" onclick="editInventory(this)">✎</button>
+                                <button class="btn-icon danger" onclick="deleteInventory(this)">✕</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><strong>Vanilla Syrup</strong></td>
+                            <td>Syrups</td>
+                            <td>0 bottles</td>
+                            <td>bottles</td>
+                            <td>5 bottles</td>
+                            <td><span class="status-badge out">Out of Stock</span></td>
+                            <td>Dec 6, 2024</td>
+                            <td>
+                                <button class="btn-icon" onclick="updateStock(this)">↻</button>
+                                <button class="btn-icon" onclick="editInventory(this)">✎</button>
+                                <button class="btn-icon danger" onclick="deleteInventory(this)">✕</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><strong>Paper Cups (16oz)</strong></td>
+                            <td>Cups & Packaging</td>
+                            <td>500 pcs</td>
+                            <td>pcs</td>
+                            <td>200 pcs</td>
+                            <td><span class="status-badge good">Good Stock</span></td>
+                            <td>Dec 7, 2024</td>
+                            <td>
+                                <button class="btn-icon" onclick="updateStock(this)">↻</button>
+                                <button class="btn-icon" onclick="editInventory(this)">✎</button>
+                                <button class="btn-icon danger" onclick="deleteInventory(this)">✕</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><strong>Caramel Syrup</strong></td>
+                            <td>Syrups</td>
+                            <td>3 bottles</td>
+                            <td>bottles</td>
+                            <td>5 bottles</td>
+                            <td><span class="status-badge low">Low Stock</span></td>
+                            <td>Dec 6, 2024</td>
+                            <td>
+                                <button class="btn-icon" onclick="updateStock(this)">↻</button>
+                                <button class="btn-icon" onclick="editInventory(this)">✎</button>
+                                <button class="btn-icon danger" onclick="deleteInventory(this)">✕</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <!-- Stock History -->
+            <div class="stock-history">
+                <h3>Recent Stock Movements</h3>
+                <table class="data-table">
+                    <thead>
+                        <tr>
+                            <th>Date & Time</th>
+                            <th>Item</th>
+                            <th>Action</th>
+                            <th>Quantity</th>
+                            <th>Performed By</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Dec 7, 2024 10:30 AM</td>
+                            <td>Arabica Coffee Beans</td>
+                            <td><span class="action-badge in">Stock In</span></td>
+                            <td>+10 kg</td>
+                            <td>Admin</td>
+                        </tr>
+                        <tr>
+                            <td>Dec 7, 2024 9:15 AM</td>
+                            <td>Whole Milk</td>
+                            <td><span class="action-badge out">Stock Out</span></td>
+                            <td>-5 L</td>
+                            <td>Employee</td>
+                        </tr>
+                        <tr>
+                            <td>Dec 6, 2024 3:45 PM</td>
+                            <td>Vanilla Syrup</td>
+                            <td><span class="action-badge out">Stock Out</span></td>
+                            <td>-2 bottles</td>
+                            <td>Employee</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </section>
 
@@ -329,6 +506,96 @@
                 <button class="btn-primary">Save Changes</button>
             </div>
         </section>
+    </div>
+
+    <!-- Add Inventory Modal -->
+    <div id="addInventoryModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Add New Inventory Item</h2>
+            <form id="addInventoryForm">
+                <div class="form-row">
+                    <div class="form-group">
+                        <label>Item Name *</label>
+                        <input type="text" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Category *</label>
+                        <select required>
+                            <option value="">Select Category</option>
+                            <option>Coffee Beans</option>
+                            <option>Milk & Dairy</option>
+                            <option>Syrups</option>
+                            <option>Cups & Packaging</option>
+                            <option>Other Supplies</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label>Current Stock *</label>
+                        <input type="number" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Unit *</label>
+                        <input type="text" placeholder="e.g., kg, L, pcs" required>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label>Minimum Quantity *</label>
+                        <input type="number" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Unit Cost</label>
+                        <input type="number" step="0.01" placeholder="0.00">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label>Supplier</label>
+                    <input type="text">
+                </div>
+                <div class="modal-actions">
+                    <button type="button" class="btn-secondary" onclick="closeModal()">Cancel</button>
+                    <button type="submit" class="btn-primary">Add Item</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Update Stock Modal -->
+    <div id="updateStockModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Update Stock</h2>
+            <form id="updateStockForm">
+                <div class="form-group">
+                    <label>Item Name</label>
+                    <input type="text" readonly value="Arabica Coffee Beans">
+                </div>
+                <div class="form-group">
+                    <label>Action *</label>
+                    <select required>
+                        <option value="">Select Action</option>
+                        <option value="in">Stock In (Add)</option>
+                        <option value="out">Stock Out (Remove)</option>
+                        <option value="adjust">Adjustment</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label>Quantity *</label>
+                    <input type="number" required>
+                </div>
+                <div class="form-group">
+                    <label>Notes</label>
+                    <textarea rows="3" placeholder="Reason for stock update..."></textarea>
+                </div>
+                <div class="modal-actions">
+                    <button type="button" class="btn-secondary" onclick="closeModal()">Cancel</button>
+                    <button type="submit" class="btn-primary">Update Stock</button>
+                </div>
+            </form>
+        </div>
     </div>
 
     <script src="admin-script.js"></script>
